src/Admin Assignment 2/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Feedback (Session__c)</relationshipLabel>
        <relationshipName>Feedback_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Session_Lookup__c</fullName>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Feedback (Training_Session__c)</relationshipLabel>
        <relationshipName>Feedback_c2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>